added folder structure

--- a/serverless/resources/lambdas.yml
+++ b/serverless/resources/lambdas.yml
@@ -1,3 +1,6 @@
-dummyLambda:
-  handler: handler.dummy
-  memorySize: 256
+testFleet:
+    handler: handler.dummy
+    events:
+      - iotFleetProvisioning:
+          templateBody: ${file(template.json)}
+          provisioningRoleArn: arn:aws:iam::12345678910:role/provisioning-role
