--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "devDependencies": {
     "serverless-webpack": "^5.5.1",
     "webpack": "=5.49.0"
+  },
+  "dependencies": {
+    "yarn": "^1.22.17"
   }
 }
