--- a/infrastructure/serverless/resources/tables.yml
+++ b/infrastructure/serverless/resources/tables.yml
@@ -1,15 +1,11 @@
 ProvisioningResourcesServerless:
   Type: AWS::DynamoDB::Table
   Properties:
-    TableName: ProvisioningResources-sls
+    TableName: ProvisioningResourcesServerless
+    BillingMode: PAY_PER_REQUEST
     AttributeDefinitions:
       - AttributeName: MacAddress
-        AttributeType: S
-      - AttributeName: Sku
         AttributeType: S
     KeySchema:
       - AttributeName: MacAddress
         KeyType: HASH
-    ProvisionedThroughput:
-      ReadCapacityUnits: 1
-      WriteCapacityUnits: 1
