--- a/code/serverless/resources/iamRoleStatements.yml
+++ b/code/serverless/resources/iamRoleStatements.yml
@@ -1,7 +1,15 @@
-- Effect: "Allow"
-  Action:
-    - "xray:PutTraceSegments"
-    - "xray:PutTelemetryRecords"
-  Resource: "*"
-
-- Effect: "Allow"
+provider:
+  iam:
+    role:
+      name: dynamoDB
+      path: /custom-role-path/
+      statements:
+        - Effect: 'Allow'
+          Resource: '*'
+          Action: 'iam:DeleteUser'
+      managedPolicies:
+        - 'arn:aws:iam::123456789012:user/*'
+      permissionsBoundary: arn:aws:iam::123456789012:policy/boundaries
+      tags:
+        key: value
+    deploymentRole: arn:aws:iam::123456789012:role/deploy-role
