--- a/code/serverless/config/environment.yml
+++ b/code/serverless/config/environment.yml
@@ -3,3 +3,5 @@ REGION: ${self:provider.region}
 ACCOUNT_ID: { Ref: "AWS::AccountId" }
 SANITIZE_LOGS: "true"
 LOG_LEVEL: ${self:custom.logLevel}
+
+PROVISIONING_TABLE: "ProvisioningResourcesServerless"
