--- a/code/serverless/resources/iamRoleStatements.yml
+++ b/code/serverless/resources/iamRoleStatements.yml
@@ -8,5 +8,4 @@
   Action:
     - "dynamodb:GetItem"
   Resource:
-    - "arn:aws:dynamodb:us-east-1:340456311184:table/ProvisioningResourcesServerless"
-    - "arn:aws:dynamodb:us-east-1:340456311184:table/ProvisioningResourcesServerless/index/*"
+    - Fn::Join: [ ":", [ "arn", { Ref: "AWS::Partition" }, "dynamodb", { Ref: "AWS::Region" }, { Ref: "AWS::AccountId" }, "table/${self:provider.environment.PROVISIONING_TABLE}" ] ]
