--- a/code/serverless.yml
+++ b/code/serverless.yml
@@ -22,3 +22,7 @@ functions: ${file(serverless/resources/lambdas.yml)}
 resources:
   - Resources:
       ${file(serverless/resources/iam.yml)}
+  - Resources:
+      ${file(serverless/resources/policies.yml)}
+plugins:
+  - serverless-webpack
